--- a/src/sass/gtk/_common-4.0.scss
+++ b/src/sass/gtk/_common-4.0.scss
@@ -4767,11 +4767,19 @@ window {
     outline-offset: -1px;
     outline: 1px solid highlight($background);
     margin: 0;
+    transition: none;
 
     @if $rimless == 'true' {
-      box-shadow: $shadow-z16, 0 0 36px transparent;
+      box-shadow: $shadow-z16,
+      0 2px 3px -1px rgba(black, 0),
+      0 4px 3px 0 rgba(black, 0),
+      0 1px 6px 0 rgba(black, 0);
     } @else {
-      box-shadow: $shadow-z16, 0 0 0 1px $window-border, 0 0 36px transparent;
+      box-shadow: $shadow-z16,
+      0 0 0 1px $window-border,
+      0 2px 3px -1px rgba(black, 0),
+      0 4px 3px 0 rgba(black, 0),
+      0 1px 6px 0 rgba(black, 0);
     }
 
     &:backdrop {
@@ -4782,9 +4790,16 @@ window {
       transition: $transition-shadow;
 
       @if $rimless == 'true' {
-        box-shadow: $shadow-z4, 0 0 36px transparent;
+        box-shadow: $shadow-z4,
+        0 8px 6px -5px rgba(black, 0),
+        0 16px 15px 2px rgba(black, 0),
+        0 6px 18px 5px rgba(black, 0);
       } @else {
-        box-shadow: $shadow-z4, 0 0 0 1px $window-border, 0 0 36px transparent;
+        box-shadow: $shadow-z4,
+        0 0 0 1px $window-border,
+        0 8px 6px -5px rgba(black, 0),
+        0 16px 15px 2px rgba(black, 0),
+        0 6px 18px 5px rgba(black, 0);
       }
     }
 
